--- a/cxzyzTests/cxzyzTests-Info.plist
+++ b/cxzyzTests/cxzyzTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.peerpath.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>alldream.l2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
